--- a/package.json
+++ b/package.json
@@ -1,27 +1,61 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.0"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.0",
-    "@eslint/eslintrc": "^3"
-  }
+    "name": "client",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@apollo/client": "^3.12.3",
+        "@graphql-codegen/cli": "^5.0.3",
+        "@hookform/resolvers": "^3.9.1",
+        "@radix-ui/react-avatar": "^1.1.2",
+        "@radix-ui/react-checkbox": "^1.1.3",
+        "@radix-ui/react-collapsible": "^1.1.2",
+        "@radix-ui/react-dialog": "^1.1.3",
+        "@radix-ui/react-dropdown-menu": "^2.1.3",
+        "@radix-ui/react-label": "^2.1.1",
+        "@radix-ui/react-radio-group": "^1.2.2",
+        "@radix-ui/react-select": "^2.1.4",
+        "@radix-ui/react-separator": "^1.1.1",
+        "@radix-ui/react-slot": "^1.1.1",
+        "@radix-ui/react-tooltip": "^1.1.5",
+        "@tanstack/react-table": "^8.20.6",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "date-fns": "^4.1.0",
+        "graphql": "^16.9.0",
+        "graphql-ws": "^5.16.0",
+        "js-cookie": "^3.0.5",
+        "lucide-react": "^0.468.0",
+        "next": "15.1.0",
+        "next-themes": "^0.4.4",
+        "react": "^19.0.0",
+        "react-day-picker": "^9.4.4",
+        "react-dom": "^19.0.0",
+        "react-hook-form": "^7.54.1",
+        "react-select": "^5.9.0",
+        "recharts": "^2.15.0",
+        "sonner": "^1.7.1",
+        "tailwind-merge": "^2.5.5",
+        "tailwindcss-animate": "^1.0.7",
+        "zod": "^3.24.1",
+        "zustand": "^5.0.2"
+    },
+    "devDependencies": {
+        "@eslint/eslintrc": "^3",
+        "@types/js-cookie": "^3.0.6",
+        "@types/node": "^20",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "eslint": "^9",
+        "eslint-config-next": "15.1.0",
+        "postcss": "^8",
+        "prettier": "3.4.2",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5"
+    }
 }
